--- a/elastic-job-example-lite-java/pom.xml
+++ b/elastic-job-example-lite-java/pom.xml
@@ -56,5 +56,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.11</version>
+        </dependency>
     </dependencies>
 </project>
