--- a/elastic-job-example-lite-spring/src/main/resources/conf/reg.properties
+++ b/elastic-job-example-lite-spring/src/main/resources/conf/reg.properties
@@ -1,4 +1,4 @@
-serverLists=localhost:5181
+serverLists=139.199.129.251:2181
 namespace=elastic-job-example-lite-spring
 baseSleepTimeMilliseconds=1000
 maxSleepTimeMilliseconds=3000
